Add babCsrfProtect hidden field on POST forms

--- a/ovidentia/skins/ovidentia/templates/acl.html
+++ b/ovidentia/skins/ovidentia/templates/acl.html
@@ -86,6 +86,7 @@ function hideNonMultipleTable()
 </script>
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="{ target }" />
 <input type="hidden" name="idx" value="{ index }" />
 <input type="hidden" name="item" value="{ id_object }" />
