--- a/ovidentia/skins/ovidentia/templates/address.html
+++ b/ovidentia/skins/ovidentia/templates/address.html
@@ -48,6 +48,7 @@ window.focus();
 //-->
 </script>
 <form method="post" name="listcontact" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <center><a href="{ closeurl }">{ closename }</a><br><br><a class="BabToChoiceMailPopupToLink"  href="{ totourl }">{ totoname }</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="BabToChoiceMailPopupToLink"  href="{ toccurl }">{ toccname }</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="BabToChoiceMailPopupToLink"  href="{ tobccurl }">{ tobccname }</a>
 </center><br>
 <table border="0" width="95%" cellpadding="2" cellspacing="0" align="center">
