--- a/ovidentia/skins/ovidentia/templates/admfaqs.html
+++ b/ovidentia/skins/ovidentia/templates/admfaqs.html
@@ -21,6 +21,7 @@ else
 //-->
 </script>
 <form name="catcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="{ tgval }" />
 <input type="hidden" name="idx" value="Categories" />
 <input type="hidden" name="item" value="{ item }" />
