--- a/ovidentia/skins/ovidentia/templates/approb.html
+++ b/ovidentia/skins/ovidentia/templates/approb.html
@@ -7,6 +7,7 @@
 
 <br />
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="approb">
 <input type="hidden" name="idx" value="unload">
 <input type="hidden" name="conf" value="art">
@@ -53,6 +54,7 @@
 { preview }
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="approb">
 <input type="hidden" name="idx" value="unload">
 <input type="hidden" name="conf" value="com">
@@ -125,6 +127,7 @@ window.focus();
 <!--#begin waitingItems --> 
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="approb" />
 <input type="hidden" name="idx" value="confirm_checked" />
 
@@ -203,6 +206,7 @@ window.focus();
 <br />
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="approb">
 <input type="hidden" name="idx" value="sunload">
 <input type="hidden" name="conf" value="post">
@@ -241,6 +245,7 @@ window.focus();
 <!--#begin confirmevent -->
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="approb">
 <input type="hidden" name="idx" value="unload">
 <input type="hidden" name="conf" value="evt">
