--- a/ovidentia/skins/ovidentia/templates/comments.html
+++ b/ovidentia/skins/ovidentia/templates/comments.html
@@ -52,6 +52,7 @@
 <!--#begin commentcreate -->
 
 <form name="comcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="comments">
 <input type="hidden" name="idx" value="List">
 <input type="hidden" name="topics" value="{ topics }">
@@ -143,6 +144,7 @@
 <!--#begin commentedit -->
 
 <form name="comcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="comments">
 <input type="hidden" name="idx" value="List">
 <input type="hidden" name="topics" value="{ topics }">
