--- a/ovidentia/skins/ovidentia/templates/contact.html
+++ b/ovidentia/skins/ovidentia/templates/contact.html
@@ -19,6 +19,7 @@ window.focus();
 <BODY>
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="contact">
 <input type="hidden" name="idx" value="list">
 <input type="hidden" name="id" value="{ id }">
