--- a/ovidentia/skins/ovidentia/templates/contacts.html
+++ b/ovidentia/skins/ovidentia/templates/contacts.html
@@ -1,5 +1,6 @@
 <!--#begin contactslist -->
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="contacts">
 <input type="hidden" name="idx" value="delete">
 <input type="hidden" name="pos" value="{ pos }">
