--- a/ovidentia/skins/ovidentia/templates/delegusr.html
+++ b/ovidentia/skins/ovidentia/templates/delegusr.html
@@ -1,6 +1,7 @@
 
 <!--#begin delegatchange -->
 <form name="dgcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="delegusr">
 <input type="hidden" name="idx" value="chgdg">
 <input type="hidden" name="mod" value="moddg">
