--- a/ovidentia/skins/ovidentia/templates/domain.html
+++ b/ovidentia/skins/ovidentia/templates/domain.html
@@ -1,5 +1,6 @@
 <!--#begin domainorder -->
 <form method="post" name="ordform" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="admcals">
 	<input type="hidden" name="idx" value="domain">
 	<input type="hidden" name="id" value="{ id }">
