--- a/ovidentia/skins/ovidentia/templates/faq.html
+++ b/ovidentia/skins/ovidentia/templates/faq.html
@@ -33,6 +33,7 @@
 
 <!--#begin admquestioncreate -->
 <form name="qcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="faq"> <input
 		type="hidden" name="idx" value="questions"> <input
 		type="hidden" name="item" value="{ idcat }"> <input
@@ -86,6 +87,7 @@
 
 <!--#begin admsubcatcreate -->
 <form name="qcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="faq"> <input
 		type="hidden" name="idx" value="questions"> <input
 		type="hidden" name="item" value="{ idcat }"> <input
@@ -125,6 +127,7 @@
 
 <!--#begin admsubcatmodify -->
 <form name="qcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="faq"> <input
 		type="hidden" name="idx" value="questions"> <input
 		type="hidden" name="item" value="{ idcat }"> <input
@@ -168,6 +171,7 @@
 <br />
 <!--#begin admquestionmodify -->
 <form name="qmod" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="faq"> <input
 		type="hidden" name="idx" value="questions"> <input
 		type="hidden" name="item" value="{ idcat }"> <input
