--- a/ovidentia/skins/ovidentia/templates/mgroup.html
+++ b/ovidentia/skins/ovidentia/templates/mgroup.html
@@ -1,6 +1,7 @@
 <!--#begin grp_maintree -->
 <script type="text/javascript" src="{ babInstallPath }scripts/ul_tree.js"></script>
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="{ tgval }" />
 <input type="hidden" name="idx" value="{ idxval }" />
 <!--#in getNextField -->
