--- a/ovidentia/skins/ovidentia/templates/page.html
+++ b/ovidentia/skins/ovidentia/templates/page.html
@@ -44,6 +44,7 @@
 			<!--#endif BAB_SESS_LOGGED -->
 
 			<form name="searchFormHome" method="post" action="index.php">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 			<input type="hidden" name="tg" value="search" />
 			<input type="hidden" name="pat" value="abcdefgh" />
 			<input type="hidden" name="idx" value="find" />
