--- a/ovidentia/skins/ovidentia/templates/profiles.html
+++ b/ovidentia/skins/ovidentia/templates/profiles.html
@@ -31,6 +31,7 @@
 
 <!--#begin profilecreate -->
 <form name="listform" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="profiles" />
 <input type="hidden" name="idx" value="plist" />
 <input type="hidden" name="idprof" value="{ profid }" />
