--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -65,6 +65,7 @@
 <!--#begin menu1 -->
 
 <form name="formsite" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="item" value="{ item }" />
@@ -313,6 +314,7 @@ mm(sksel);
 </script>
 
 <form name="formsite" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="site" />
 	<input type="hidden" name="idx" value="menusite" />
 	<input type="hidden" name="item" value="{ item }" />
@@ -419,6 +421,7 @@ mm(sksel);
 
 <!--#begin menu3 -->
 <form name="formsite_bloc2" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="action" value="menu3" />
@@ -571,6 +574,7 @@ function validateNum(field)
 	}
 </script>
 <form name="formsite_bloc2" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="action" value="menu4" />
@@ -670,6 +674,7 @@ document.forms.formsite_bloc3[edit].value = obj.value;
 </script>
 
 <form name="formsite_bloc3" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="item" value="{ item }" />
@@ -737,6 +742,7 @@ document.forms.formsite_bloc3[edit].value = obj.value;
 <!--#begin menu6 -->
 
 <form name="formsite_bloc4" method="post" action="{ babPhpSelf }" onsubmit="selectAll()">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="site" />
 	<input type="hidden" name="idx" value="menusite" />
 	<input type="hidden" name="item" value="{ item }" />
@@ -1168,6 +1174,7 @@ function hideShowCnx()
 </script>
 
 <form name="formsiteauth" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="modify" />
 <input type="hidden" name="item" value="{ id }" />
@@ -1377,6 +1384,7 @@ hideShowCnx();
 
 <!--#begin menu9 -->
 <form name="formsitereg" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="item" value="{ item }" />
@@ -1468,6 +1476,7 @@ hideShowCnx();
 
 <!--#begin disclaimeredit -->
 <form name="discmod" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="unload" />
 <input type="hidden" name="item" value="{ item }" />
@@ -1511,6 +1520,7 @@ hideShowCnx();
 </script>
 
 <form name="formsiteauth" method="post" action="{ babPhpSelf }" enctype="multipart/form-data" onsubmit="wait_upload()">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="addons" />
 <input type="hidden" name="idx" value="zipupgrade" />
 <input type="hidden" name="MAX_FILE_SIZE" value="{ babMaxFileSize }" />
@@ -1606,6 +1616,7 @@ function drop_table_check(obj)
 </script>
 
 <form name="database" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="sites" />
 <input type="hidden" name="idx" value="database" />
 <input type="hidden" name="action" value="export_database" />
@@ -1690,6 +1701,7 @@ function show_hide_el(obj)
 }
 </script>
 <form name="editor" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="action" value="menu10" />
@@ -1877,6 +1889,7 @@ document.getElementById('evtColor').style.backgroundColor = '#'+color;
 </script>
 
 <form name="formsite_bloc13" method="post" action="{ babPhpSelf }" onsubmit="selectAll()">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="site" />
 	<input type="hidden" name="idx" value="menusite" />
 	<input type="hidden" name="item" value="{ item }" />
