--- a/ovidentia/skins/ovidentia/templates/sitesearch.html
+++ b/ovidentia/skins/ovidentia/templates/sitesearch.html
@@ -1,4 +1,5 @@
 <form name="formsite" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="site" />
 <input type="hidden" name="idx" value="menusite" />
 <input type="hidden" name="item" value="{ item }" />
