--- a/ovidentia/skins/ovidentia/templates/stat.html
+++ b/ovidentia/skins/ovidentia/templates/stat.html
@@ -93,6 +93,7 @@ function setIntervalToOther()
 </script>
 
 <form name="statinttime" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="stat" />
 <input type="hidden" name="idx" value="{ idx }" />
 <input type="hidden" name="reqvars" value="" />
