--- a/ovidentia/skins/ovidentia/templates/tmCommon.html
+++ b/ovidentia/skins/ovidentia/templates/tmCommon.html
@@ -261,6 +261,7 @@ function deleteCheckedRows(sCtrlName, sTbodyId)
 
 
 <form name ="workingHours" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="{ m_datas[idx] }" />
 	<input type="hidden" name="action" value="{ m_datas[action] }" />
@@ -345,6 +346,7 @@ function on_cancel()
 //]]>
 </script>
 <form name ="warningyesno" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="{ m_datas[idx] }" />
 	<input type="hidden" name="action" value="{ m_datas[action] }" />
@@ -392,6 +394,7 @@ function on_cancel()
 //]]>
 </script>
 <form name ="warningyesno" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="{ m_datas[idx] }" />
 	<input type="hidden" name="action" value="{ m_datas[action] }" />
@@ -455,6 +458,7 @@ function submit_form()
 </script>
 
 <form name="configuration" method="post" action="{ babPhpSelf }" onsubmit="return(submit_form())">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="iIdConfiguration" value="{ m_datas[iIdConfiguration] }" />
@@ -591,6 +595,7 @@ function submit_form()
 //]]>
 </script>
 <form name ="spfList" method="post" action="{ babPhpSelf }" onsubmit="return(submit_form())">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
@@ -663,6 +668,7 @@ function submit_form()
 //]]>
 </script>
 <form name="fieldText" method="post" action="{ babPhpSelf }" onsubmit="return(submit_form())">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_htmlDatas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
@@ -732,6 +738,7 @@ function submit_form()
 //]]>
 </script>
 <form name="fieldArea" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_htmlDatas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
@@ -833,6 +840,7 @@ function submit_form()
 //]]>
 </script>
 <form name="addfield" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_htmlDatas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
@@ -1007,6 +1015,7 @@ function evtSetColor(iIdCategory, sColor)
 //]]>
 </script>
 <form name ="categoriesList" method="post" action="{ babPhpSelf }" onsubmit="return(submit_form())">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="{ m_datas[deleteCategoryIdx] }" />
 	<input type="hidden" name="action" value="" />
@@ -1103,6 +1112,7 @@ function evtSetColor(color)
 //]]>
 </script>
 <form name="categoryForm" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
@@ -1201,6 +1211,7 @@ function submit_form()
 //]]>
 </script>
 <form name="noticeForm" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ m_datas[tg] }" />
 	<input type="hidden" name="idx" value="" />
 	<input type="hidden" name="action" value="" />
