--- a/ovidentia/skins/ovidentia/templates/admocs.html
+++ b/ovidentia/skins/ovidentia/templates/admocs.html
@@ -1,6 +1,7 @@
 
 <!--#begin occreate -->
 <form name="occreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admocs">
 <input type="hidden" name="idx" value="list">
 <input type="hidden" name="addoc" value="addoc">
@@ -62,6 +63,7 @@ valign="middle">{  name }:</td>
 <!--#begin ocmodify -->
 
 <form name="ocmodify" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admoc">
 <input type="hidden" name="idx" value="modify">
 <input type="hidden" name="item" value="{ id }">
@@ -112,6 +114,7 @@ valign="middle">{  name }:</td>
 <br />
 
 <form name="ocduplicate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admoc">
 <input type="hidden" name="idx" value="modify">
 <input type="hidden" name="item" value="{ id }">
@@ -161,6 +164,7 @@ valign="middle">{  name }:</td>
 </form>
 <br>
 <form method="post" name="ovmldbf" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admoc">
 <input type="hidden" name="idx" value="modify">
 <input type="hidden" name="item" value="{ id }">
@@ -248,6 +252,7 @@ function org_mm()
 <td class="BabLoginCadreBackground"> 
 
 <form name="eorgform" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admoc">
 <input type="hidden" name="idx" value="browr">
 <input type="hidden" name="ocid" value="{ ocid }">
@@ -379,6 +384,7 @@ function org_mm()
 <!--#begin edit_entity_types -->
 
 <form name="edit_entity_types" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
   <input type="hidden" name="tg" value="admoc">
   <input type="hidden" name="idx" value="octypes">
   <input type="hidden" name="action" value="save_types">
