--- a/ovidentia/skins/ovidentia/templates/admstats.html
+++ b/ovidentia/skins/ovidentia/templates/admstats.html
@@ -1,6 +1,7 @@
 <!--#begin edit_connection_logging_setup -->
 
 <form name="connection_logging_setup" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admstats" />
 <input type="hidden" name="idx" value="save_connections" />
 <div class="BabLoginCadreBackground" style="padding: 2px; margin: 1em 3em"> 
@@ -27,6 +28,7 @@
 <!--#begin cleanstats -->
 
 <form name="celanstatsform" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admstats" />
 <input type="hidden" name="idx" value="cleanstats" />
 <div class="BabLoginCadreBackground" style="padding: 2px; margin: 1em 3em"> 
