--- a/ovidentia/skins/ovidentia/templates/charset.html
+++ b/ovidentia/skins/ovidentia/templates/charset.html
@@ -4,6 +4,7 @@
 //]]>
 </script>
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="charset" />
 	<input type="hidden" name="idx" value="convertSite" />
 	<input type="hidden" name="sFromCharset" value="{ m_datas[sFromCharset] }" />
