--- a/ovidentia/skins/ovidentia/templates/delegat.html
+++ b/ovidentia/skins/ovidentia/templates/delegat.html
@@ -29,6 +29,7 @@
 
 <!--#begin categorieslist -->
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="delegat" />
 	<input type="hidden" name="idx" value="displayCategoriesListForm" />
 
@@ -80,6 +81,7 @@ function setColor(color)
 //]]>
 </script>
 <form name="catcolor" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="{ tgval }" />
 	<input type="hidden" name="idx" value="categoriesList" />
 	<input type="hidden" name="idcat" value="{ idcat }" />
@@ -161,6 +163,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 //]]>
 </script>
 <form name="dgcreate" enctype="multipart/form-data" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="MAX_FILE_SIZE" value="{ iMaxImgFileSize }" />
 	<input type="hidden" name="tg" value="{ tgval }" />
 	<input type="hidden" name="idx" value="list" />
@@ -298,6 +301,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 <!--#begin delegatdelete -->
 
 <form name="dgcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="delegat" />
 <input type="hidden" name="idx" value="list" />
 <input type="hidden" name="id" value="{ id }" />
@@ -328,6 +332,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 
 <!--#begin delegatmembers -->
 <form name="listform" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="delegat" />
 	<input type="hidden" name="idx" value="mem" />
 	<input type="hidden" name="id" value="{ id }" />
@@ -379,6 +384,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 //]]>
 </script>
 <form name="ucreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="tg" value="delegat" />
 	<input type="hidden" name="idx" value="mem" />
 	<input type="hidden" name="id" value="{ id }" />
