--- a/ovidentia/skins/ovidentia/templates/groups.html
+++ b/ovidentia/skins/ovidentia/templates/groups.html
@@ -2,6 +2,7 @@
 
 
 <form name="gcreatemod" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="groups">
 <input type="hidden" name="idx" value="List">
 <input type="hidden" name="grpid" value="{ arr[id] }">
@@ -86,6 +87,7 @@ function ovidentia_hidegroupselect(select) {
 	// -->
 </script>
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="group">
 <input type="hidden" name="idx" value="Deletem">
 <input type="hidden" name="item" value="{ grpid }">
@@ -161,6 +163,7 @@ function ovidentia_hidegroupselect(select) {
 
 <!--#begin groupsoptions -->
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="groups">
 <input type="hidden" name="idx" value="options">
 <input type="hidden" name="update" value="options">
@@ -415,6 +418,7 @@ function load_clear()
 
 
 <form name="gcreatemod" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="groups" />
 <input type="hidden" name="idx" value="List" />
 <input type="hidden" name="grpid" value="{ arr[grpid] }" />
@@ -459,6 +463,7 @@ function load_clear()
 
 <!--#begin confirmdeletegroup -->
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="group" />
 <input type="hidden" name="idx" value="DeleteGrroup" />
 <input type="hidden" name="idgroup" value="{ idgroup }" />
