--- a/ovidentia/skins/ovidentia/templates/hiddenUpload.html
+++ b/ovidentia/skins/ovidentia/templates/hiddenUpload.html
@@ -1,5 +1,6 @@
 <!--#begin hiddenUpload -->
 <form style="display:none" method="post" id="hiddenFrom" name="hiddenFrom" target="hiddenIFrame" enctype="multipart/form-data" action="{ sPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<!--#in getNextHiddenField -->
 	<input type="hidden" name="{ sHiddenFieldName }" value="{ sHiddenFieldValue }" />
 	<!--#endin getNextHiddenField -->
