--- a/ovidentia/skins/ovidentia/templates/indexfiles.html
+++ b/ovidentia/skins/ovidentia/templates/indexfiles.html
@@ -12,6 +12,7 @@ function index_confirm(obj) {
 }
 </script>
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="admindex" />
 <input type="hidden" name="action" value="index" />
 
@@ -87,6 +88,7 @@ function index_confirm(obj) {
 <!--#begin status -->
 
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 
 <input type="hidden" name="tg" value="admindex" />
 <input type="hidden" name="idx" value="files" />
