--- a/ovidentia/skins/ovidentia/templates/notes.html
+++ b/ovidentia/skins/ovidentia/templates/notes.html
@@ -2,6 +2,7 @@
 <!--#begin notescreate -->
 
 <form name="notcreate" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="notes">
 <input type="hidden" name="idx" value="List">
 <input type="hidden" name="create" value="create">
@@ -63,6 +64,7 @@
 
 
 <form name="notemod" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="note">
 <input type="hidden" name="idx" value="Modify">
 <input type="hidden" name="item" value="{ note_id }">
