--- a/ovidentia/skins/ovidentia/templates/thesaurus.html
+++ b/ovidentia/skins/ovidentia/templates/thesaurus.html
@@ -10,6 +10,7 @@ v.innerHTML = '<b>'+tag+'</b>';
 //-->
 </script>
 <form name="ftagupd" method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="thesaurus">
 <input type="hidden" name="idx" value="tagsman">
 <input type="hidden" name="updtags" value="updtags">
@@ -62,6 +63,7 @@ v.innerHTML = '<b>'+tag+'</b>';
 
 <!--#begin tagsimpfile -->
 <form method="post" action="{ babPhpSelf }" enctype="multipart/form-data">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="MAX_FILE_SIZE" value="{ maxfilesize }">
 <input type="hidden" name="tg" value="thesaurus">
 <input type="hidden" name="idx" value="impmap">
@@ -102,6 +104,7 @@ v.innerHTML = '<b>'+tag+'</b>';
 
 <!--#begin tagsmapfile -->
 <form method="post" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="thesaurus">
 <input type="hidden" name="idx" value="tagsman">
 <input type="hidden" name="separ" value="{ separ }">
