--- a/ovidentia/skins/ovidentia/templates/topics.html
+++ b/ovidentia/skins/ovidentia/templates/topics.html
@@ -296,6 +296,7 @@ function ovidentia_popuptreeviewselectparentcategory_topic() {
 </script>
 
 <form name="topicCreateModify" id="topicCreateModify" method="post" enctype="multipart/form-data" action="{ babPhpSelf }">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 	<input type="hidden" name="MAX_FILE_SIZE" value="{ iMaxImgFileSize }" />
 	<input type="hidden" name="tg" value="{ tgval }" />
 	<input type="hidden" name="idx" value="list" />
@@ -753,6 +754,7 @@ function ovidentia_popuptreeviewselectparentcategory_topic() {
 <br />
 <!--#begin articleslist -->
 <form method="post" action="{ babPhpSelf }" name="listform">
+<input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="topic">
 <input type="hidden" name="idx" value="deletea">
 <input type="hidden" name="item" value="{ item }">
